<resources>
    <string name="accept">Accept</string>
    <string name="add">Add</string>
    <string name="add_contact">Add contact</string>
    <string name="to_label">To</string>
    <string name="frequents">Frequents</string>
    <string name="all_contacts">All contacts</string>
    <string name="friend_request_message">Add a message to your friend request</string>
    <string name="add_contact_message_default">Talk to me on btox like a reasonable human being.</string>
    <string name="add_contact_message_error_empty">Write something to send first</string>
    <string name="app_name" translatable="false">bTox</string>
    <string name="confirm">Confirm</string>
    <string name="connecting">Connecting…</string>
    <string name="contact_typing">Typing…</string>
    <string name="copied">Copied</string>
    <string name="copy_atox">Copy</string>
    <string name="forward">Forward</string>
    <string name="create">Create</string>
    <string name="create_a_tox_profile">Create a Tox profile</string>
    <string name="create_profile_onboarding_title">Welcome to Messaging</string>
    <string name="create_profile_onboarding_subtitle">Create a new profile or import an existing one.</string>
    <string name="onboarding_import_with_arrow">Import &gt;</string>
    <string name="onboarding_create_with_arrow">Create &gt;</string>
    <string name="delete_contact">Delete contact</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="messages_incoming">Incoming messages</string>
    <string name="about_description">btox is an aTox fork with new features and a new UI.</string>
    <string name="github_link" translatable="false">https://github.com/dismal002/bTox</string>
    <string name="name">Name</string>
    <string name="name_default">btox user</string>
    <string name="no_contacts_call_to_action">What are you waiting for? Add a contact to get started!</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="profile_photo_description">Profile photo</string>
    <string name="reject">Reject</string>
    <string name="send">Send</string>
    <string name="discard">Discard</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_people_and_options">People &amp; options</string>
    <string name="action_archive">Archive</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="action_delete">Delete</string>
    <string name="action_chat_background">Chat background</string>
    <string name="chat_background_set">Set background</string>
    <string name="chat_background_clear">Clear background</string>
    <string name="chat_background_permission_error">Could not persist access to selected background image.</string>
    <string name="action_notification_off">Mute notifications</string>
    <string name="action_notification_on">Unmute notifications</string>
    <string name="action_block">Block</string>
    <string name="action_unblock">Unblock</string>
    <string name="action_not_supported">Not supported in this build</string>
    <string name="archive_not_supported">Archive is not supported in this build</string>
    <string name="conversation_archived">Conversation archived</string>
    <string name="conversation_unarchived">Conversation unarchived</string>
    <string name="sending">Sending…</string>
    <string name="settings">Settings</string>
    <string name="show_archived">Archived conversations</string>
    <string name="show_blocked">Blocked conversations</string>
    <string name="show_inbox">Inbox conversations</string>
    <string name="archived_conversations_title">Archived</string>
    <string name="blocked_conversations_title">Blocked</string>
    <string name="archived_empty_text">No archived conversations</string>
    <string name="blocked_empty_text">No blocked conversations</string>
    <string name="conversation_blocked">Conversation blocked</string>
    <string name="conversation_unblocked">Conversation unblocked</string>
    <string name="show_advanced">Advanced</string>
    <string name="hide_advanced">Hide advanced</string>
    <string name="status_indicator">Status indicator</string>
    <string name="status_message">Status message</string>
    <string name="posted_now">Now</string>
    <plurals name="num_minutes_ago">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>
    <string name="status_message_default">Brought to you live, by btox</string>
    <string name="tox_id">Tox ID</string>
    <string name="tox_id_error_length">Tox ID must be 76 characters (%1$d/76)</string>
    <string name="tox_id_error_checksum">Invalid checksum</string>
    <string name="tox_id_error_hex">Only hex allowed</string>
    <string name="tox_id_share">Share Tox ID</string>
    <string name="update">Update</string>
    <string name="quit">Quit</string>
    <string name="quit_confirm">Are you sure you wish to quit?</string>
    <string name="call_confirm">Are you sure you wish to call?</string>
    <string name="friend_requests">Friend requests</string>
    <string name="friend_request_from">Friend request from %1$s</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_history_cleared">History cleared</string>
    <string name="clear_history_confirm">Are you sure you want to clear your chat history with %1$s?</string>
    <string name="delete_message_confirm">Are you sure you want to delete the message \"%1$s\"?</string>
    <string name="import_tox_save">Import</string>
    <string name="import_tox_save_failed">Import failed: %1$s</string>
    <string name="export_tox_save">Export Tox save</string>
    <string name="tox_save_exported">Tox save exported</string>
    <string name="never">Never</string>
    <string name="info">Info</string>
    <string name="atox_offline">Offline</string>
    <string name="atox_connected_with_tcp">Connected (TCP)</string>
    <string name="atox_connected_with_udp">Connected (UDP)</string>
    <string name="read_qr">QR</string>
    <string name="qr_scan_hint">Align a Tox QR code inside the frame</string>
    <string name="qr_camera_permission_required">Camera permission is required to scan QR codes.</string>
    <string name="qr_camera_open_failed">Unable to open camera for QR scanning.</string>
    <string name="read_nfc">NFC</string>
    <string name="nfc_not_available">NFC is not available on this device.</string>
    <string name="nfc_scan_prompt">Tap another bTox device or NFC tag.</string>
    <string name="nfc_scan_success">Received Tox ID via NFC.</string>
    <string name="nfc_scan_invalid">No valid Tox ID found on NFC tag.</string>
    <string name="widget_description">Messaging conversations widget</string>
    <string name="widget_open_conversations">Tap to open conversations</string>
    <string name="widget_locked_message">Widgets are not supported with App Lock enabled</string>
    <string name="pref_heading_theme">Theme</string>
    <string name="pref_heading_ui_style">UI style</string>
    <string name="pref_ui_style_classic">Classic</string>
    <string name="pref_ui_style_material3">Material 3</string>
    <string name="pref_heading_app_color">App color</string>
    <string name="pref_app_color_pick_palette">Pick from palette</string>
    <string name="pref_app_color_enter_hex">Enter hex code</string>
    <string name="pref_app_color_invalid_hex">Invalid hex color. Use format #RRGGBB.</string>
    <string name="color_picker_default_title">Select a Color</string>
    <string name="color_swatch_description">Color %1$d</string>
    <string name="color_swatch_description_selected">Color %1$d selected</string>
    <string name="pref_theme_follow_system">Follow system</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_theme_dark">Dark</string>
    <string name="pref_color_green">Green</string>
    <string name="pref_color_blue">Blue</string>
    <string name="pref_color_teal">Teal</string>
    <string name="pref_color_orange">Orange</string>
    <string name="pref_heading_app_lock">App lock</string>
    <string name="pref_app_lock_none">None</string>
    <string name="pref_app_lock_screenlock">Screenlock</string>
    <string name="pref_app_lock_biometric">Biometic</string>
    <string name="pref_app_lock_password">App Password</string>
    <string-array name="pref_app_lock_options">
        <item>@string/pref_app_lock_none</item>
        <item>@string/pref_app_lock_screenlock</item>
        <item>@string/pref_app_lock_biometric</item>
        <item>@string/pref_app_lock_password</item>
    </string-array>
    <string name="pref_app_password">App password</string>
    <string name="pref_set_app_password">Set app password</string>
    <string name="pref_change_app_password">Change app password</string>
    <string-array name="pref_theme_options">
        <item>@string/pref_theme_follow_system</item>
        <item>@string/pref_theme_light</item>
        <item>@string/pref_theme_dark</item>
    </string-array>
    <string-array name="pref_ui_style_options">
        <item>@string/pref_ui_style_classic</item>
        <item>@string/pref_ui_style_material3</item>
    </string-array>
    <string-array name="pref_app_color_options">
        <item>@string/pref_color_green</item>
        <item>@string/pref_color_blue</item>
        <item>@string/pref_color_teal</item>
        <item>@string/pref_color_orange</item>
    </string-array>
    <string name="pref_heading_ft_auto_accept">Auto-accept file transfers</string>
    <string name="pref_ft_auto_accept_none">None</string>
    <string name="pref_ft_auto_accept_images">Images</string>
    <string name="pref_ft_auto_accept_all">All</string>
    <string-array name="pref_ft_auto_accept_options">
        <item>@string/pref_ft_auto_accept_none</item>
        <item>@string/pref_ft_auto_accept_images</item>
        <item>@string/pref_ft_auto_accept_all</item>
    </string-array>
    <string name="pref_heading_type">Type</string>
    <string name="pref_proxy_type_none">None</string>
    <string name="pref_proxy_type_http">HTTP</string>
    <string name="pref_proxy_type_socks5">SOCKS5</string>
    <string-array name="pref_proxy_type_options">
        <item>@string/pref_proxy_type_none</item>
        <item>@string/pref_proxy_type_http</item>
        <item>@string/pref_proxy_type_socks5</item>
    </string-array>
    <string name="pref_heading_advanced">Advanced</string>
    <string name="pref_heading_bootstrap_nodes">Bootstrap node source</string>
    <string name="pref_bootstrap_node_builtin">Built-in</string>
    <string name="pref_bootstrap_node_user_provided">User-provided</string>
    <string-array name="pref_bootstrap_node_options">
        <item>@string/pref_bootstrap_node_builtin</item>
        <item>@string/pref_bootstrap_node_user_provided</item>
    </string-array>
    <string name="pref_bootstrap_nodes_description">User-provided JSON files must have the same format as on https://nodes.tox.chat/json</string>
    <string name="version_display" translatable="false">btox v%1$s — %2$d</string>
    <string name="send_as_action">Send as action</string>
    <string name="or_import_existing_save">or import an existing Tox save</string>
    <string name="profile_information">Profile information</string>
    <string name="profile_settings">Profile settings</string>
    <string name="profile_photo_row">Change your profile photo</string>
    <string name="profile_nickname">Change your nickname</string>
    <string name="friend_request">Friend request</string>
    <string name="from">From</string>
    <string name="delete">Delete</string>
    <string name="call">Call</string>
    <string name="view_message_info">View info</string>
    <string name="share">Share</string>
    <string name="export_history">Export history</string>
</resources>