<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/call"
        android:icon="@drawable/ic_phone_small_light"
        android:title="@string/call"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_contact"
        android:title="@string/action_add_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_people_and_options"
        android:title="@string/action_people_and_options"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_archive"
        android:title="@string/action_archive"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_chat_background"
        android:title="@string/action_chat_background"
        app:showAsAction="never" />
    <item
        android:id="@+id/backup_history"
        android:title="@string/export_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear_history"
        android:title="@string/clear_history"
        app:showAsAction="never" />
</menu>
