<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share_message"
        android:icon="@drawable/ic_share_dark"
        android:title="@string/share"
        appcompat:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/action_forward_message"
        android:icon="@drawable/ic_forward_dark"
        android:title="@string/forward"
        appcompat:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/action_copy_message"
        android:icon="@drawable/ic_content_copy_dark"
        android:title="@string/copy_atox"
        appcompat:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/action_view_message_info"
        android:icon="@drawable/ic_info_dark"
        android:title="@string/view_message_info"
        appcompat:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/action_delete_message"
        android:icon="@drawable/ic_delete_small_dark"
        android:title="@string/delete"
        appcompat:showAsAction="collapseActionView|always" />
</menu>
