<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_archive_small_dark"
        android:title="@string/action_archive"
        appcompat:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_small_dark"
        android:title="@string/action_delete"
        appcompat:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/action_notification_off"
        android:icon="@drawable/ic_notifications_off_dark"
        android:title="@string/action_notification_off"
        appcompat:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/action_add_contact"
        android:icon="@drawable/ic_person_add_dark"
        android:title="@string/action_add_contact"
        appcompat:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/action_block"
        android:icon="@drawable/ic_dnd_on_dark"
        android:title="@string/action_block"
        appcompat:showAsAction="collapseActionView|always" />
</menu>
