<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/side_nav_bar_background"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="16dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <com.dismal.btox.ui.AvatarImageView
            android:id="@+id/profilePhoto"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/profile_photo_description"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:shapeAppearanceOverlay="@style/CircleImageView"
            app:statusIndicatorVisible="false"
            app:strokeColor="@null"
            app:layout_constraintBottom_toTopOf="@id/profileName"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/name_default"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toTopOf="@id/profileStatusMessage"/>
    <TextView
            android:id="@+id/profileStatusMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/status_message_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/statusIndicator"
            app:layout_constraintStart_toStartOf="parent"/>
    <ImageButton
            android:id="@+id/statusIndicator"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@null"
            android:contentDescription="@string/status_indicator"
            android:src="@drawable/circle"
            app:layout_constraintBottom_toBottomOf="@id/profileStatusMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/profileStatusMessage"/>
</androidx.constraintlayout.widget.ConstraintLayout>
