<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mg_chat_surface"
    android:orientation="vertical"
    tools:context=".ui.friendrequest.FriendRequestFragment">
    <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/friend_request"/>

    <LinearLayout android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/mg_surface"
        android:elevation="1dp"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textColor="@color/mg_text_primary"
            android:textStyle="bold"/>
        <TextView android:id="@+id/from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/mg_text_primary"
            android:textIsSelectable="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/message"
            android:textColor="@color/mg_text_primary"
            android:textStyle="bold"/>
        <TextView android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/mg_text_secondary"
            android:textIsSelectable="true"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <Button android:id="@+id/reject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@android:color/white"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/reject"
                app:layout_constraintEnd_toStartOf="@id/accept"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <Button android:id="@+id/accept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:text="@string/accept"
                app:layout_constraintStart_toEndOf="@id/reject"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>
